--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/mocha/bin/mocha",
     "dev": "nodemon server.js"
   },
   "repository": {
@@ -27,6 +27,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "dotenv": "^16.0.3"
+    "chai": "^4.3.7",
+    "dotenv": "^16.0.3",
+    "mocha": "^9.2.2"
   }
 }
